--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "php": ">=5.4.0",
         "illuminate/support": "5.*",
         "nicmart/string-template": "~0.1",
+        "setasign/fpdi-tcpdf": "^2.0",
         "tecnickcom/tcpdf": "6.2.*"
     },
     "autoload": {
